# countable

./: .env  .env.example  .gitignore  CONTRIBUTING.md  Cargo.toml  Dockerfile  Dockerfile.save  Makefile  README.md  backup.sh  bot.py  build.rs  compose.yaml  docker.md  lol.txt  neofetch  pyproject.toml  requirements.txt  server.py
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: dependency-review.yml  makefile.yml  rust.yml
sql/: fetch.sql  reset.sql  sql.py  starter.sql
src/: alphabet_count.py  cog_manage.py  error_handling.py  event.py  events.py  events.rs  help.py  leaderboard.py  log.py  main.rs  note.md  setup.py  stuffs.py
src/commands/: events.rs  ex.py  help.rs  mod.rs  on_message.rs  setup.rs
src/commands/stuffs/: last_x_commit.rs  mod.rs  ping.rs  status.rs
src/data/: cargo_ver.txt  current_commit_id.txt  git_status.txt  last_x_commit_history.txt
src/events/: mod.rs  on_message.rs  on_ready.rs
src/sqls/: countable.sql
src/utils/: __init__.py  datetime.rs  github.rs  id.rs  mod.rs  paginator.py  revision.rs  stuffs.py  time.py  versions.rs
