[package]
name = "countable"
version = "0.1.0"
edition = "2021"

[build]
build = "./src/build.rs"

[dependencies]
chrono = "0.4.24"
dotenv = "0.15.0"
fern = {version="0.6.2", features=[
    "chrono",
    "colored"
]}
lazy_static = "1.4.0"
log = "0.4.17"
parking_lot = "0.12.1"
poise = "0.6.1"
rand = "0.8.5"
serenity = {version="0.12.0", features=[
    "cache",
    "builder",
    "chrono",
    "client",
    "framework",
    "gateway",
    "http",
    "model",
    "standard_framework",
    "utils",
]}
sysinfo = "0.30.5"
tokio = {version="1.26.0", features=["full"]}
tokio-postgres = {version="0.7.7", features=["with-chrono-0_4"]}
toml = "0.8.9"
